--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@ TEMPORARY<//-->                            </h1>
                                 		<li><a href="#" onclick="wb.setExtractiveIndicator('EITI','National payments','Payments to Central Budget',true); return false">National Payments</a></li>
                                 		<li><a href="#" onclick="wb.setExtractiveIndicator('EITI','Local payments','Payments to Local Budget',true); return false">Local Payments</a></li>
                                     		<li><a href="#" onclick="wb.setExtractiveIndicator('EITI','Total payments','Total Payments to Budget',true); return false">Total Payments</a></li>
+						<li class="dropmenu_category">Donations to soums</li>
+                                		<li><a href="#" onclick="wb.setExtractiveIndicator('Donations','Total donations','Total Donations in Soum',true); return false">Total Donations</a></li>
+                                		<li><a href="#" onclick="wb.setExtractiveIndicator('Donations','Donation number','Number of Donations Made to Soum',true); return false">Number of Donations</a></li>
                                     		<li class="dropmenu_category">Company Operations</li>
                                     		<li><a href="#" onclick="wb.setExtractiveIndicator('Company','Location','Soums of Operation',true); return false">Location</a></li>
                                     	</ul>
