Revising donations and adding env. fund contrib

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@ TEMPORARY<//-->                            </h1>
                                     		<li><a href="#" onclick="wb.setExtractiveIndicator('EITI','Total payments','Total Payments to Budget',true); return false">Total Payments</a></li>
 						<li class="dropmenu_category">Donations to soums</li>
                                 		<li><a href="#" onclick="wb.setExtractiveIndicator('Donations','Total donations','Total Donations in Soum',true); return false">Total Donations</a></li>
-                                		<li><a href="#" onclick="wb.setExtractiveIndicator('Donations','Donation number','Number of Donations Made to Soum',true); return false">Number of Donations</a></li>
+                                		<li><a href="#" onclick="wb.setExtractiveIndicator('Donations','Environmental contributions','Total Payments into Environmental Fund',true); return false">Environment Fund</a></li>
+						<li><a href="#" onclick="wb.setExtractiveIndicator('Donations','Transaction count','Number of Payments Made to Soum',true); return false">Number of Transactions</a></li>
                                     		<li class="dropmenu_category">Company Operations</li>
                                     		<li><a href="#" onclick="wb.setExtractiveIndicator('Company','Location','Soums of Operation',true); return false">Location</a></li>
                                     	</ul>
