Adding menu item to call setExtractiveIndicator for forest areas

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ TEMPORARY<//-->                            </h1>
                                 <ul class="dropmenu_options">
                                     <li class="dropmenu_category">Environment</li>
                                     <li><a href="#" onclick="wb.setExtractiveIndicator('Special Protected Areas','Location','Special Protected Areas',true); return false">Special Protected Areas</a></li>
-                                    <li>Forest Area (Coming Soon)</li>
+				    <li><a href="#" onclick="wb.setExtractiveIndicator('Forest','Location','Forested Area',true); return false">Forested Area</a></li>
                                 </ul>
                             </li>
                         </ul>
