Removing More Data link under chart

--- a/index.html
+++ b/index.html
@@ -295,9 +295,10 @@ TEMPORARY REMOVING CHART<//-->
 		<span><i><b>CHART COMING SOON</b></i></span>
                     
                 </div>        
-
+<!--
                 <a class="moreData" href="http://data.worldbank.org/country/mongolia" title="more data">MORE DATA</a>
                 <br class="clear" />
+HIDING "MORE DATA" LINK<//-->
             </div>
 
             <div id="rightDesc">
