Restoring dynamic title bar, cleaning up

--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@ MOVING WB LOGO -->
                         
                         <div id="map-summary-container" style="">
                             <h1 id="map-summary" style="display:none" class="loaded txtRed txtGeorgia">
-                            <span>133 Companies mapped to 74 soums</span>
-<!--                                <span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="active_projects_header">financed activities working in</span> 
-                                <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="mapped_locations_header">mapped locations</span>
-TEMPORARY<//-->                            </h1>
+                                <span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="active_projects_header"></span>
+                                <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="mapped_locations_header"></span>
+                            </h1>
                         </div>
                     </div>
                 </div> <!--#map-content-header//-->
@@ -268,7 +267,7 @@ TEMPORARY<//-->                            </h1>
             </div>
     
             <div id="rightInfo" class="clearfix">
-                <h3 class="clearfix" id="left-chart-title"><span class="rightHdr">FINANCED ACTIVITIES BY SECTOR</span> <a class="arwOrange" style="display:none" href="javascript: return false;">BY SECTOR</a></h3>
+                <h3 class="clearfix" id="left-chart-title"><span class="rightHdr">GOVERNMENT REVENUES BY TYPE</span> <a class="arwOrange" style="display:none" href="javascript: return false;">BY SECTOR</a></h3>
                 <span id="chart-left-stat">                
                     <h4 id="sector_funding_total" class="bigNumber"></h4>
                     <h2 id="sector_funding_description" style="display: none"></h2>
