Trying print function

--- a/index.html
+++ b/index.html
@@ -382,6 +382,8 @@ HIDING "MORE DATA" LINK<//-->
  <//-->
     
     </div><!--#container//-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
+        </script>
     <script type="text/javascript" charset="utf-8" src="./js/jquery.printElement.js"></script>
 </body>
 </html>
