--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@ HIDING "MORE DATA" LINK<//-->
     </div><!--#container//-->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
         </script>
-    <script type="text/javascript" charset="utf-8" src="./js/jquery.printElement.js"></script>
+    <script type="text/javascript" src="http://github.com/erikzaadi/jQueryPlugins/raw/master/jQuery.printElement/jquery.printElement.min.js">
+        </script>
 </body>
 </html>
