More print function work

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ MOVING WB LOGO -->
                             <!-- <li><a href="#" id="">Embed the Map</a></li> -->
                         </ul>
                     </li>
-                    <li class="download"><a href="#" onclick="('#wb_map').printElement({printMode:'popup'})"id="print_link" title="print"><span></span>PRINT</a>
+                    <li><a href="#" id="print_link" title="print"><span></span>PRINT</a></li>
                 </ul>
             </div> <!--#share//-->
             <div id="share_window" style="display: none;">
