More print function work

--- a/index.html
+++ b/index.html
@@ -395,5 +395,6 @@ HIDING "MORE DATA" LINK<//-->
         function printElem(options){
             $('#wb_map').printElement(options);
         }
+        </script>
 </body>
 </html>
