More print function work

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ HIDING "MORE DATA" LINK<//-->
                                                  });
                           });
         function printElem(options){
-            $('#wb_map').printElement(options);
+            $('#wb_map').jquery.printElement(options);
         }
         </script>
 </body>
