--- a/index.html
+++ b/index.html
@@ -382,8 +382,6 @@ HIDING "MORE DATA" LINK<//-->
  <//-->
     
     </div><!--#container//-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
-        </script>
     <script type="text/javascript" src="http://github.com/erikzaadi/jQueryPlugins/raw/master/jQuery.printElement/jquery.printElement.min.js">
         </script>
     <script type="text/javascript">
@@ -393,7 +391,7 @@ HIDING "MORE DATA" LINK<//-->
                                                  });
                           });
         function printElem(options){
-            $('#wb_map').jquery.printElement(options);
+            $('#wb_map').printElement(options);
         }
         </script>
 </body>
