More print function work

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ HIDING "MORE DATA" LINK<//-->
                                                  });
                           });
         function printElem(options){
-            $('#wb_map').printElement(options);
+            $('#local').printElement(options);
         }
         </script>
 </body>
