--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script type="text/javascript" charset="utf-8" src="http://geocommons.com/javascripts/f1.api.js"></script>
 <script src="./js/map.js" type="text/javascript"></script>
 <script src="./js/extractives.js" type="text/javascript"></script>
+            <script type="text/javascript" src="http://github.com/erikzaadi/jQueryPlugins/raw/master/jQuery.printElement/jquery.printElement.min.js"></script>
 
     <script type="text/javascript" charset="utf-8">
       // if (top.frames.length!=0)
@@ -383,10 +384,7 @@ HIDING "MORE DATA" LINK<//-->
  <//-->
     
     </div><!--#container//-->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js">
-        </script>
-    <script type="text/javascript" src="http://github.com/erikzaadi/jQueryPlugins/raw/master/jQuery.printElement/jquery.printElement.min.js">
-        </script>
+
     <script type="text/javascript">
         $(document).ready(function(){
                           $("#simplePrint").click(function(){
