--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ HIDING "MORE DATA" LINK<//-->
                                                  });
                           });
         function printElem(options){
-            $('#local').printElement(options);
+            $('#local').fn.printElement(options);
         }
         </script>
 </body>
