--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 <body onload="onload()">
 	<div id="container" class="clearfix">
-<!--        <div id="header" class="clearfix">
+      <div id="header" class="clearfix">
         	<a class="network-name" href="http://www.worldbank.org">The World Bank</a>
-MOVING WB LOGO -->        	
+
 
 <!-- LEAVE OUT LANGUAGE HEADER
 	<div id="hdrLang">
