--- a/extractives/about_extractives_mn.html
+++ b/extractives/about_extractives_mn.html
@@ -33,7 +33,7 @@
 
 <br>
 
-<p><a href="http://maps.worldbank.org/extractives/eap/mongolia/">Click here to go to the map page.</a></p>
+<p><a href="http://mongoliamining.org/">Click here to go to the map page.</a></p>
 
 <br>
 
