--- a/extractives/how_extractives_mn.html
+++ b/extractives/how_extractives_mn.html
@@ -33,7 +33,7 @@
 
 
 <h2><a href = "https://dl.dropbox.com/u/46704012/howto/mongolia/HowToGuide_Mongolia.pdf"> Click here to download a PDF version of this how-to guide.</a></h2>
-<p><a href="http://maps.worldbank.org/extractives/eap/mongolia">Click here to go to the map page.</a></p>
+<p><a href="http://mongoliamining.org">Click here to go to the map page.</a></p>
 
 <hr />
 
@@ -117,7 +117,7 @@ You can zoom in and out in two ways. You can use the mouse wheel or scrolling po
 <a id="mapped"></a>
 
 <h4>WHAT INFORMATION WAS MAPPED</h4>
-<p>The following datasets were compiled for this mapping, and additional information about these data can be found at <a href="http://maps.worldbank.org/extractives/about_extractives_mn"</a>.</p>
+<p>The following datasets were compiled for this mapping, and additional information about these data can be found at <a href="http://jimduncan4.github.com/mongolia-mining/extractives/about_extractives_mn"</a>.</p>
 
 <h3>Mining information</h3>
 <p>•    Amount of soum area covered by production and exploration licenses<br />•	Where EITI reporting companies operate<br />•	Number of licenses in each soum<br />•	Investment agreements (where available)</p>
@@ -163,7 +163,7 @@ You can zoom in and out in two ways. You can use the mouse wheel or scrolling po
 <a id="moreinfo"></a>
 
 <h4>MORE INFORMATION</h4>
-<p>If you want to learn more about where the data came from, how it was collected or what was done to process and prepare it for the map, much of this information can be found at the <a href="http://maps.worldbank.org/extractives/about_extractives_mn.html">About page</a> for the Mapping the Extractive Industries project. </p>
+<p>If you want to learn more about where the data came from, how it was collected or what was done to process and prepare it for the map, much of this information can be found at the <a href="http://jimduncan4.github.com/mongolia-mining/extractives/about_extractives_mn.html">About page</a> for the Mapping the Extractive Industries project. </p>
 
 <p>In addition, we are hoping to receive feedback about what would make this application more useful and relevant, so please feel free to contact us at <a target="_new" href="mailto:maps@worldbank.org">maps@worldbank.org</a> with questions or suggestions.</p>
 
