--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@ MOVING WB LOGO -->
                     
                     <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
                         <ul class="dropmenu_options">
-                            <li><a href="http://twitter.com/home?status=The+World+Bank+-+Mapping+the+Extractive+Industries+http://maps.worldbank.org/extractives/afr/ghana" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
-                            <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=http://maps.worldbank.org/extractives/afr/ghana" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
+                            <li><a href="http://twitter.com/home?status=The+World+Bank+-+Mapping+the+Extractive+Industries+http://mongoliamining.org/" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
+                            <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=http://mongoliamining.org/" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
                             <!-- <li><a href="#" id="">Embed the Map</a></li> -->
                         </ul>
                     </li>
@@ -335,8 +335,8 @@ HIDING "MORE DATA" LINK<//-->
         </span>
         <a class="breadcrumb-link" href="./" title='World Bank: World'>World</a>
         <a class="breadcrumb-link " href="./extractives">Extractive Industries</a>
-        <a class="breadcrumb-link " href="./extractives/afr">Extractives in Africa</a>
-        <a class="breadcrumb-link breadcrumb-last" href="./extractives/afr/ghana">Ghana</a>
+        <a class="breadcrumb-link " href="./extractives/eap">Extractives in East Asia Pacific</a>
+        <a class="breadcrumb-link breadcrumb-last" href="./extractives/eap/mongolia">Mongolia</a>
 //-->
         
     </div>
