--- a/extractives/how_extractives_mn.html
+++ b/extractives/how_extractives_mn.html
@@ -90,7 +90,7 @@ You can zoom in and out in two ways. You can use the mouse wheel or scrolling po
 <p><img align="left" height="350"src="https://dl.dropbox.com/u/46704012/howto/mongolia/license_mn.png" /></p>
 <br clear="left">
 
-<p><br clear="all">Company and revenue data: Use the dropdown menu labeled <b>Revenues/Companies</b> to show summaries by soum of how much is paid to local or central budgets, or to highlight the soums in which a company is operating. You cannot display license and company/revenue data at the same time.</p>
+<p><br clear="all">Company and revenue data: Use the dropdown menu labeled <b>Revenues/Companies</b> to show summaries by soum of how much is paid to local or central budgets, or to highlight the soums in which a company is operating. You can also see the donations made by companies to the local level. You cannot display license and company/revenue data at the same time.</p>
 
 <p><img align="left" height="275"src="https://dl.dropbox.com/u/46704012/howto/mongolia/company_mn.png" /></p>
 
